Streamline project by removing interactive visualizations

--- a/WORKSPACE/01_EDA.ipynb
+++ b/WORKSPACE/01_EDA.ipynb
@@ -16,7 +16,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Libraries loaded successfully\n"
+      "Libraries loaded successfully\n",
+      "Plotly configured for both HTML and PNG export\n"
      ]
     }
    ],
@@ -29,9 +30,13 @@
     "import plotly.express as px\n",
     "import plotly.graph_objects as go\n",
     "from plotly.subplots import make_subplots\n",
+    "import plotly.io as pio\n",
     "import warnings\n",
     "from pathlib import Path\n",
     "warnings.filterwarnings('ignore')\n",
+    "\n",
+    "# Configure Plotly for both HTML and PNG export\n",
+    "pio.kaleido.scope.mathjax = None  # Disable MathJax for faster PNG export\n",
     "\n",
     "# Set style\n",
     "plt.style.use('seaborn-v0_8')\n",
@@ -45,7 +50,47 @@
     "for directory in [results_dir, figures_dir, data_dir]:\n",
     "    directory.mkdir(exist_ok=True)\n",
     "\n",
-    "print(\"Libraries loaded successfully\")"
+    "print(\"Libraries loaded successfully\")\n",
+    "print(\"Plotly configured for both HTML and PNG export\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "bd46115b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Plot helper function ready\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Helper function to save plots in both formats\n",
+    "def save_plotly_figure(fig, filename_base, show_fig=True):\n",
+    "    \"\"\"Save Plotly figure as both HTML and PNG\"\"\"\n",
+    "    try:\n",
+    "        # Save as HTML (interactive)\n",
+    "        fig.write_html(figures_dir / f'{filename_base}.html')\n",
+    "        \n",
+    "        # Save as PNG (static)\n",
+    "        fig.write_image(figures_dir / f'{filename_base}.png', \n",
+    "                       width=1200, height=800, scale=2)\n",
+    "        \n",
+    "        print(f\"Saved {filename_base} as both HTML and PNG\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"Warning: Could not save PNG for {filename_base}: {e}\")\n",
+    "        # Still save HTML even if PNG fails\n",
+    "        fig.write_html(figures_dir / f'{filename_base}.html')\n",
+    "        print(f\"Saved {filename_base} as HTML only\")\n",
+    "    \n",
+    "    if show_fig:\n",
+    "        fig.show()\n",
+    "\n",
+    "print(\"Plot helper function ready\")"
    ]
   },
   {
@@ -58,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "286fb20a",
    "metadata": {},
    "outputs": [
@@ -69,6 +114,10 @@
       "Branded Foods Dataset Shape: (1977398, 21)\n",
       "Food Nutrients Dataset Shape: (25652681, 11)\n",
       "Nutrient Reference Dataset Shape: (477, 5)\n",
+      "\n",
+      "Memory Usage:\n",
+      "   Branded Foods: 2378.1 MB\n",
+      "   Food Nutrients: 2152.9 MB\n",
       "\n",
       "Memory Usage:\n",
       "   Branded Foods: 2378.1 MB\n",
@@ -97,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "210e8cf2",
    "metadata": {},
    "outputs": [
@@ -142,6 +191,12 @@
       "  brand_name               : 1,432,502 non-null ( 27.6% missing)\n",
       "  subbrand_name            : 105,791 non-null ( 94.6% missing)\n",
       "  gtin_upc                 : 1,977,398 non-null (  0.0% missing)\n",
+      "  subbrand_name            : 105,791 non-null ( 94.6% missing)\n",
+      "  gtin_upc                 : 1,977,398 non-null (  0.0% missing)\n",
+      "  ingredients              : 1,972,025 non-null (  0.3% missing)\n",
+      "  not_a_significant_source_of: 79,615 non-null ( 96.0% missing)\n",
+      "  serving_size             : 1,966,645 non-null (  0.5% missing)\n",
+      "  serving_size_unit        : 1,958,400 non-null (  1.0% missing)\n",
       "  ingredients              : 1,972,025 non-null (  0.3% missing)\n",
       "  not_a_significant_source_of: 79,615 non-null ( 96.0% missing)\n",
       "  serving_size             : 1,966,645 non-null (  0.5% missing)\n",
@@ -150,9 +205,21 @@
       "  branded_food_category    : 1,966,768 non-null (  0.5% missing)\n",
       "  data_source              : 1,977,398 non-null (  0.0% missing)\n",
       "  package_weight           : 843,833 non-null ( 57.3% missing)\n",
+      "  household_serving_fulltext: 1,936,089 non-null (  2.1% missing)\n",
+      "  branded_food_category    : 1,966,768 non-null (  0.5% missing)\n",
+      "  data_source              : 1,977,398 non-null (  0.0% missing)\n",
+      "  package_weight           : 843,833 non-null ( 57.3% missing)\n",
       "  modified_date            : 1,977,378 non-null (  0.0% missing)\n",
       "  available_date           : 1,977,398 non-null (  0.0% missing)\n",
       "  market_country           : 1,977,398 non-null (  0.0% missing)\n",
+      "  modified_date            : 1,977,378 non-null (  0.0% missing)\n",
+      "  available_date           : 1,977,398 non-null (  0.0% missing)\n",
+      "  market_country           : 1,977,398 non-null (  0.0% missing)\n",
+      "  discontinued_date        : 3,246 non-null ( 99.8% missing)\n",
+      "  preparation_state_code   : 81,910 non-null ( 95.9% missing)\n",
+      "  trade_channel            : 33,938 non-null ( 98.3% missing)\n",
+      "  short_description        : 82,007 non-null ( 95.9% missing)\n",
+      "  material_code            : 1,323 non-null ( 99.9% missing)\n",
       "  discontinued_date        : 3,246 non-null ( 99.8% missing)\n",
       "  preparation_state_code   : 81,910 non-null ( 95.9% missing)\n",
       "  trade_channel            : 33,938 non-null ( 98.3% missing)\n",
@@ -184,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "673c5fac",
    "metadata": {},
    "outputs": [
@@ -248,10 +315,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "4a5be29c",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved top_brands_analysis as both HTML and PNG\n"
+     ]
+    },
     {
      "data": {
       "application/vnd.plotly.v1+json": {
@@ -1195,8 +1269,9 @@
     "    color_continuous_scale='Viridis'\n",
     ")\n",
     "fig.update_layout(height=600, showlegend=False)\n",
-    "fig.write_html(figures_dir / 'top_brands_analysis.html')\n",
-    "fig.show()\n",
+    "\n",
+    "# Save in both formats\n",
+    "save_plotly_figure(fig, 'top_brands_analysis')\n",
     "\n",
     "print(f\"\\n Brand Statistics:\")\n",
     "print(f\"   Total unique brands: {branded_df['brand_owner'].nunique():,}\")\n",
@@ -1206,10 +1281,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "32879886",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved food_categories_distribution as both HTML and PNG\n"
+     ]
+    },
     {
      "data": {
       "application/vnd.plotly.v1+json": {
@@ -2071,8 +2153,9 @@
     ")\n",
     "fig.update_traces(textposition='inside', textinfo='percent+label')\n",
     "fig.update_layout(height=600)\n",
-    "fig.write_html(figures_dir / 'food_categories_distribution.html')\n",
-    "fig.show()\n",
+    "\n",
+    "# Save in both formats\n",
+    "save_plotly_figure(fig, 'food_categories_distribution')\n",
     "\n",
     "print(f\"\\n Category Statistics:\")\n",
     "print(f\"   Total unique categories: {branded_df['branded_food_category'].nunique():,}\")\n",
@@ -2089,7 +2172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "026ab5dd",
    "metadata": {},
    "outputs": [
@@ -2100,6 +2183,13 @@
       " Ingredients Data Availability:\n",
       "   Products with ingredients: 1,972,025 (99.7%)\n",
       "   Products missing ingredients: 5,373 (0.3%)\n",
+      "\n",
+      " Sample Ingredients Lists:\n",
+      "   1. Vegetable Oil\n",
+      "   2. INGREDIENTS: BEEF STOCK, CONTAINS LESS THAN 2% OF: MIREPOIX (CARROTS, CELERY, ONIONS), SALT, NATURAL...\n",
+      "   3. INGREDIENTS: CLAM STOCK, POTATOES, CLAMS, CREAM, VEGETABLE OIL (CORN, CANOLA, AND/OR SOYBEAN), CELER...\n",
+      "   4. INGREDIENTS: WATER, CREAM, BROCCOLI, CELERY, VEGETABLE OIL (CORN, CANOLA, AND/OR SOYBEAN), MODIFIED ...\n",
+      "   5. INGREDIENTS: CHICKEN STOCK, CONTAINS LESS THAN 2% OF: YEAST EXTRACT, DEHYDRATED CHICKEN, NATURAL FLA...\n",
       "\n",
       " Sample Ingredients Lists:\n",
       "   1. Vegetable Oil\n",
@@ -2136,7 +2226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "de522f9b",
    "metadata": {},
    "outputs": [
@@ -2147,13 +2237,23 @@
       "Nutritional Data Overview:\n",
       "   Total nutrient records: 25,652,681\n",
       "   Unique nutrients tracked: 110\n",
+      "   Unique nutrients tracked: 110\n",
+      "   Products with nutrition data: 1,873,698\n",
+      "\n",
+      " Key Nutrient Coverage:\n",
       "   Products with nutrition data: 1,873,698\n",
       "\n",
       " Key Nutrient Coverage:\n",
       "   Protein        : 1,861,719 products\n",
       "   Total Fat      : 1,840,594 products\n",
+      "   Protein        : 1,861,719 products\n",
+      "   Total Fat      : 1,840,594 products\n",
       "   Carbohydrates  : 1,852,738 products\n",
       "   Energy (Calories): 1,841,010 products\n",
+      "   Carbohydrates  : 1,852,738 products\n",
+      "   Energy (Calories): 1,841,010 products\n",
+      "   Sodium         : 1,847,798 products\n",
+      "   Fiber          : 1,568,179 products\n",
       "   Sodium         : 1,847,798 products\n",
       "   Fiber          : 1,568,179 products\n"
      ]
@@ -2195,10 +2295,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "aa694cd8",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved products_by_year as both HTML and PNG\n"
+     ]
+    },
     {
      "data": {
       "application/vnd.plotly.v1+json": {
@@ -3073,8 +3180,9 @@
     "        labels={'x': 'Year', 'y': 'Number of Products'}\n",
     "    )\n",
     "    fig.update_layout(height=400)\n",
-    "    fig.write_html(figures_dir / 'products_by_year.html')\n",
-    "    fig.show()\n",
+    "    \n",
+    "    # Save in both formats\n",
+    "    save_plotly_figure(fig, 'products_by_year')\n",
     "    \n",
     "    print(f\" Temporal Data Overview:\")\n",
     "    print(f\"   Date range: {branded_df['available_date'].min()} to {branded_df['available_date'].max()}\")\n",
