--- a/WORKSPACE/03_Feature_Engineering.ipynb
+++ b/WORKSPACE/03_Feature_Engineering.ipynb
@@ -615,6 +615,134 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "408d4d1e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EXECUTING FEATURE ENGINEERING PIPELINE\n",
+      "==================================================\n",
+      "Loading sample data for feature engineering...\n",
+      "Loaded from processed data\n",
+      "Working with 10,000 branded food products (sample)\n",
+      "Starting advanced feature engineering...\n",
+      "   Creating brand intelligence features...\n",
+      "   Extracting ingredient features...\n",
+      "   Creating nutritional features...\n",
+      "   Adding temporal features...\n",
+      "   Encoding category features...\n",
+      "Feature engineering complete! Created 44 features\n",
+      "Preparing features for modeling...\n",
+      "Prepared 15 features for modeling\n",
+      "Saving engineered features...\n",
+      "Features saved to ..\\RESULTS\\features\n",
+      "  - engineered_features.csv (10,000 rows, 44 columns)\n",
+      "  - engineered_features.pkl (pickled version)\n",
+      "  - feature_summary.json (metadata)\n",
+      "\n",
+      "FEATURE ENGINEERING COMPLETE!\n",
+      "==================================================\n",
+      "Created 44 total features\n",
+      "Ready for modeling with 15 numeric features\n",
+      "Dataset shape: (10000, 44)\n",
+      "\n",
+      "Files saved:\n",
+      "  - RESULTS/features/engineered_features.csv\n",
+      "  - RESULTS/features/engineered_features.pkl\n",
+      "  - RESULTS/features/feature_scaler.pkl\n",
+      "  - RESULTS/features/feature_summary.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "# EXECUTE THE FEATURE ENGINEERING PIPELINE\n",
+    "print(\"EXECUTING FEATURE ENGINEERING PIPELINE\")\n",
+    "print(\"=\" * 50)\n",
+    "\n",
+    "# Load original data with sample size for memory management\n",
+    "print(\"Loading sample data for feature engineering...\")\n",
+    "try:\n",
+    "    # Try to load from processed data first\n",
+    "    branded_df = pd.read_csv('../RESULTS/processed_data/branded_food_cleaned.csv', nrows=10000)\n",
+    "    print(\"Loaded from processed data\")\n",
+    "except:\n",
+    "    # Fall back to original data\n",
+    "    branded_df = pd.read_csv('../DATA/branded_food.csv', nrows=10000)\n",
+    "    print(\"Loaded from original data\")\n",
+    "\n",
+    "print(f\"Working with {len(branded_df):,} branded food products (sample)\")\n",
+    "\n",
+    "# Create a simple nutrient_df for compatibility\n",
+    "nutrient_df = pd.DataFrame({'fdc_id': branded_df['fdc_id'].head(1000)})\n",
+    "\n",
+    "# Run feature engineering pipeline\n",
+    "features_df = create_advanced_features(branded_df, nutrient_df)\n",
+    "\n",
+    "# Prepare features for modeling\n",
+    "modeling_features, feature_names, scaler = prepare_modeling_features(features_df)\n",
+    "\n",
+    "# Save all features and preprocessing objects\n",
+    "feature_summary = save_features(features_df, scaler)\n",
+    "\n",
+    "print(\"\\nFEATURE ENGINEERING COMPLETE!\")\n",
+    "print(\"=\" * 50)\n",
+    "print(f\"Created {feature_summary['total_features']} total features\")\n",
+    "print(f\"Ready for modeling with {len(feature_names)} numeric features\")\n",
+    "print(f\"Dataset shape: {feature_summary['dataset_shape']}\")\n",
+    "print(\"\\nFiles saved:\")\n",
+    "print(\"  - RESULTS/features/engineered_features.csv\")\n",
+    "print(\"  - RESULTS/features/engineered_features.pkl\") \n",
+    "print(\"  - RESULTS/features/feature_scaler.pkl\")\n",
+    "print(\"  - RESULTS/features/feature_summary.json\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d36cc443",
+   "metadata": {},
+   "source": [
+    "## Feature Engineering Logic & Rationale\n",
+    "\n",
+    "### Why These Features Matter for Food Health Classification:\n",
+    "\n",
+    "#### 1. **Brand Intelligence Features**\n",
+    "- **Logic**: Large brands often have different health profiles than small artisanal producers\n",
+    "- **brand_product_count**: Mega-brands (1000+ products) vs small brands (<10 products)\n",
+    "- **brand_tier**: Market positioning affects ingredient quality choices\n",
+    "- **brand_premium_score**: Premium brands often use cleaner ingredients\n",
+    "- **brand_category_diversity**: Diversified brands may prioritize different health standards\n",
+    "\n",
+    "#### 2. **Ingredient Category Scores**\n",
+    "- **preservatives_score**: Higher = more processed, lower health score\n",
+    "  - Targets: sodium benzoate, BHT, BHA, TBHQ (chemical preservatives)\n",
+    "- **artificial_colors_score**: Red 40, Yellow 5, Blue 1 = ultra-processed indicators\n",
+    "- **artificial_sweeteners_score**: Aspartame, sucralose = diet/low-cal but artificial\n",
+    "- **natural_sweeteners_score**: Honey, maple syrup, stevia = healthier alternatives\n",
+    "- **whole_grains_score**: Whole wheat, quinoa, oats = fiber and nutrients\n",
+    "- **healthy_fats_score**: Olive oil, nuts, seeds = beneficial fats\n",
+    "\n",
+    "#### 3. **Processing & Complexity Indicators**\n",
+    "- **processing_claims_count**: Organic, non-GMO, gluten-free = cleaner processing\n",
+    "- **ingredient_count**: Shorter lists often indicate less processing\n",
+    "- **complexity_score**: Chemical-sounding names = ultra-processed foods\n",
+    "- **ingredient_health_score**: Weighted combination favoring natural ingredients\n",
+    "\n",
+    "#### 4. **Category Intelligence**\n",
+    "- **category_frequency**: Popular categories may have different health standards\n",
+    "- **category_health_score**: Fruits/vegetables = 3, processed foods = 1\n",
+    "\n",
+    "### Scoring Philosophy:\n",
+    "- **Higher scores = healthier** for positive indicators (whole grains, natural sweeteners)\n",
+    "- **Higher scores = less healthy** for negative indicators (preservatives, artificial colors)\n",
+    "- **Weighted combinations** balance multiple health factors\n",
+    "- **Caps and normalization** prevent extreme outliers"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "a6228b6c",
    "metadata": {},
